# SCI

./: .coverage  .gitignore  AI_AGENT_INSTRUCTIONS.md  ALL_85_BUGS_VERIFICATION_REPORT.md  BUG_REPORT_COMPREHENSIVE.txt  BUG_REPORT_V10_COMPREHENSIVE.md  BUG_REPORT_V3_FINAL.txt  BUG_REPORT_V4_COMPREHENSIVE.md  BUG_REPORT_V5_FINAL.md  BUG_REPORT_V6_COMPREHENSIVE.md  BUG_REPORT_V7_FINAL.md  BUG_REPORT_V8_FINAL_REVIEW.md  BUG_REPORT_V9_COMPREHENSIVE.md  BUG_STATUS_SUMMARY.md  BUG_VERIFICATION_REPORT.md  COMPLETE_BUG_VERIFICATION_REPORT.md  COMPLIANCE_GAP_ANALYSIS.md  COMPLIANCE_PROGRESS_REPORT.md  COMPLIANCE_REVIEW_REPORT.md  CRITICAL_FIXES_REQUIRED.md  ENVIRONMENT_SETUP_COMPLETE.md  FINAL_COMPLIANCE_REPORT.md  FINAL_CRITICAL_FIXES_APPLIED.md  FIXES_APPLIED_SUMMARY.md  IMPLEMENTATION_STATUS.md  MEDIUM_AND_LOW_BUGS_FIXED.md  NATURE_REVIEW_REPORT.md  NATURE_SCIENTIFIC_REVIEW.md  PRODUCTION_BUG_REPORT.md  Prompt to AI agent.txt  QUICKSTART.md  README.md  README_FINAL.md  REVIEW_SUMMARY.md  SCI Training Regime and questions.txt  SESSION_SUMMARY.md  SETUP_AND_TRAINING_GUIDE.md  START_HERE.md  TEST_RESULTS_SUMMARY.md  activate_venv.bat  (+14 more)
.claude/: settings.local.json
configs/: ablations.yaml  base_config.yaml  baseline.yaml  sci_full.yaml
documents/: SCI_AGENT_INSTRUCTIONS_PART1.md  SCI_AGENT_INSTRUCTIONS_PART2.md  SCI_AGENT_INSTRUCTIONS_PART3.md  SCI_ENGINEERING_STANDARDS.md  SCI_HYPERPARAMETER_GUIDE.md  SCI_MASTER_GUIDE.md  SCI_MASTER_GUIDE_PART1.md  SCI_MASTER_GUIDE_PART2.md  SCI_MASTER_GUIDE_PART3.md  SCI_Nature_Figure_Specifications.md  SCI_Novel_Proposal.docx  (+5 more)
(+65 files in other folders)
